# mxchip-az3166-azurertos

./: .gitignore  .gitmodules  README.md  TODO
MXChip/AZ3166/: CMakeLists.txt  README.md
MXChip/AZ3166/apps/: CMakeLists.txt
MXChip/AZ3166/apps/common/: board_init.c  board_init.h  nx_user.h  optimize_size.h  wifi_init.c  wifi_init.h
MXChip/AZ3166/apps/create_threads/: CMakeLists.txt  main.c
MXChip/AZ3166/apps/mqtt_iot_hub/: CMakeLists.txt  main.c  main_l475.c  mqtt_iothub.c  sample_iot_hub.c
MXChip/AZ3166/cmake/: FindCMSIS.cmake  arm_none_eabi_stm32.cmake  gcc_stm32f4.cmake  stm32_linker.cmake  utilities.cmake
MXChip/AZ3166/docs/: README.md
MXChip/AZ3166/lib/drivers/cyw43362/: CMakeLists.txt  cyw43362_lib.ewp
MXChip/AZ3166/lib/drivers/cyw43362/F4xx_lib/peripherals/: platform_mcu_peripheral.h
MXChip/AZ3166/lib/drivers/stm32f4xx/: CMakeLists.txt  stm32f4xx_hal_conf.h
